Created a Damagable Abstract class to carry over functionality from characters to gfs and in the future to enemies. Made some things Lists instead of arrays to have access to methods that lists have. Added some functionality to allow detecting CurrentHP MaxHP with out knowing if it's team lugana before hand. Added crisis level detection.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -140,6 +140,7 @@
     <Compile Include="EntryGroup.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Extended.cs" />
+    <Compile Include="Saves\Damageable.cs" />
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
     <Compile Include="Ffcc.cs" />
