--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -140,6 +140,7 @@
     <Compile Include="EntryGroup.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Extended.cs" />
+    <Compile Include="Menu\Images\Box_Options.cs" />
     <Compile Include="Saves\Damageable.cs" />
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
@@ -702,8 +703,6 @@
     <Compile Include="Memory.cs" />
     <Compile Include="Menu\Images\Cards.cs" />
     <Compile Include="Menu\Images\Cards.ID.cs" />
-    <Compile Include="Menu\Images\DrawBox.cs" />
-    <Compile Include="Menu\Images\DrawPointer.cs" />
     <Compile Include="Menu\Images\Faces.cs" />
     <Compile Include="Menu\Images\Faces.ID.cs" />
     <Compile Include="Menu\Images\Icons.cs" />
