Tweaks to TIM2 changed the bbp indicator to a enum flag. Cleaned up the Read method added ABGR1555toRGBA32bit to make the conversion clear and the same for everything. GetClutColors is a bit simplier with CLP flag.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -93,6 +93,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugLinux|x86'">
     <OutputPath>bin\</OutputPath>
@@ -100,6 +102,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
