updates to victory menu disabled left and right when static is set added smallmsgbox and timedmsgbox draw box can now have no size set and it'll dynamicly change to text size.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -136,6 +136,8 @@
     <Compile Include="Battle\Menu\IGMData\IGMData_HP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXP.cs" />
     <Compile Include="Battle\Menu\IGMData_PlayerEXPGroup.cs" />
+    <Compile Include="Menu\IGMData\IGMData_SmallMsgBox.cs" />
+    <Compile Include="Menu\IGMData\IGMData_TimedMsgBox.cs" />
     <Compile Include="Menu\Menus.cs" />
     <Compile Include="Battle\Menu\VictoryMenu.cs" />
     <Compile Include="Battle\module_battle.cs" />
