commiting but will roll back. just want to perserve the work encase
I was trying stuff but it's breaking alot of things so I wanna start over.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Image\Texture_Base.cs" />
     <Compile Include="Menu\IGMData\IGMData_SmallMsgBox.cs" />
     <Compile Include="Menu\IGMData\IGMData_TimedMsgBox.cs" />
+    <Compile Include="Menu\Lobby\IGMData_Selections.cs" />
     <Compile Include="Menu\Menus.cs" />
     <Compile Include="Battle\Menu\VictoryMenu.cs" />
     <Compile Include="Battle\module_battle.cs" />
