Added more TextTags
I scanned the strings I know about and added placeholders for the tags that were missing.

I wanted to add a custom tag using a value that isn't in use.

--- a/Encoding/Encoding.csproj
+++ b/Encoding/Encoding.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Sources\Tags\FF8TextTagColor.cs" />
     <Compile Include="Sources\Tags\FF8TextTagDialog.cs" />
     <Compile Include="Sources\Tags\FF8TextTagKey.cs" />
+    <Compile Include="Sources\Tags\FF8TextTagOption.cs" />
     <Compile Include="Sources\Tags\FF8TextTagParam.cs" />
     <Compile Include="Sources\Tags\FF8TextTagTerm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
