--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PartyItems.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXPGroup.cs" />
+    <Compile Include="Battle\Menu\IGMData\IGMData_PartyAP.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Image\TDW.cs" />
