Split classes into multiple files.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -147,8 +147,20 @@
     <Compile Include="Image\TDW.cs" />
     <Compile Include="Image\Texture_Base.cs" />
     <Compile Include="Input\Buttons.cs" />
+    <Compile Include="Input\ButtonTrigger.cs" />
     <Compile Include="Input\Button_Flags.cs" />
     <Compile Include="Input\Input2.cs" />
+    <Compile Include="Input\InputActions.cs" />
+    <Compile Include="Input\InputButton.cs" />
+    <Compile Include="Input\InputGamePad.cs" />
+    <Compile Include="Input\InputKeyboard.cs" />
+    <Compile Include="Input\InputMouse.cs" />
+    <Compile Include="Input\Inputs.cs" />
+    <Compile Include="Input\Inputs_FF7PSX.cs" />
+    <Compile Include="Input\Inputs_FF82000.cs" />
+    <Compile Include="Input\Inputs_FF8PSX.cs" />
+    <Compile Include="Input\Inputs_FF8Steam.cs" />
+    <Compile Include="Input\Inputs_OpenVIII.cs" />
     <Compile Include="Input\MouseLockMode.cs" />
     <Compile Include="Menu\IGMDataItem\I_Color.cs" />
     <Compile Include="Menu\IGMDataItem\I_Data.cs" />
