Input => Input 2 I've replaced all the references for Input with Input 2 It's very much WIP but I haven't commited in a while.
I also put the FPS camera into it's own class so now the battle and world map can use the same code instead of having 2 copies of everything.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
+    <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
