--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -837,6 +837,7 @@
     <Compile Include="World\debug_MCH.cs" />
     <Compile Include="World\module_world_debug.cs" />
     <Compile Include="World\texl.cs" />
+    <Compile Include="World\wm2field.cs" />
     <Compile Include="World\wmset.cs" />
   </ItemGroup>
   <ItemGroup>
