--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -134,7 +134,9 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
+    <Compile Include="Battle\Enemy.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
+    <Compile Include="Battle\Information.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
