--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -778,7 +778,7 @@
     <Compile Include="Menu\IGM\IGMData\IGMData_PartyGroup.cs" />
     <Compile Include="Menu\IGM\IGMData\IGMData_SideMenu.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_Help.cs" />
-    <Compile Include="Menu\IGM_Items\IGMData\IGMData_ItemPool.cs" />
+    <Compile Include="Menu\IGMData\IGMData_ItemPool.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_Statuses.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TargetPool.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TopMenu.cs" />
@@ -802,7 +802,7 @@
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_EL_D_Values.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_Group.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_PageTitle.cs" />
-    <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_Pool.cs" />
+    <Compile Include="Menu\IGMData\IGMData_Mag_Pool.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_Stat_Slots.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_ST_A_D_Slots.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Mag_ST_A_Values.cs" />
