adding support for upscale

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Image\TDW.cs" />
+    <Compile Include="Image\Texture2DWrapper.cs" />
     <Compile Include="Image\Texture_Base.cs" />
     <Compile Include="Input\Buttons.cs" />
     <Compile Include="Input\ButtonTrigger.cs" />
