new Slide class to interpolate between values
This wraps around lerp methods. To handle the required varibles to make it work.

Debug slide in from side uses it and blinking on LGSG uses it now.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Menu\Lobby\IGM_Lobby.cs" />
     <Compile Include="Menu\Menu_Base.cs" />
     <Compile Include="Saves\Damageable.cs" />
+    <Compile Include="Slide.cs" />
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
     <Compile Include="Ffcc.cs" />
