--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Battle\init_debugger_battle.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
+    <Compile Include="Battle\Menu\IGMData\IGMDataItem_Renzokeken_Gradient.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_HP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PartyItems.cs" />
