--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Saves\Damageable.cs" />
     <Compile Include="Saves\ICharacterData.cs" />
     <Compile Include="Saves\IDamageable.cs" />
+    <Compile Include="Saves\TTCardInfo.cs" />
     <Compile Include="Slide.cs" />
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
