zzzDeArchive as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "zzzDeArchive"]
 	path = zzzDeArchive
-	url = https://github.com/Sebanisu/zzzDeArchive.git
+	url = https://github.com/Sebanisu/zzzDeArchive
