--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -7,7 +7,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FB782E67-C1C0-4230-9BC7-131782757651}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>OpenVIII.Test</RootNamespace>
     <AssemblyName>OpenVIII.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
