Rename igmdataitem file to base

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Input\Inputs_FF8Steam.cs" />
     <Compile Include="Input\Inputs_OpenVIII.cs" />
     <Compile Include="Input\MouseLockMode.cs" />
+    <Compile Include="Menu\IGMDataItem\Base.cs" />
     <Compile Include="Menu\IGMDataItem\Box.cs" />
     <Compile Include="Menu\IGMDataItem\I_Color.cs" />
     <Compile Include="Menu\IGMDataItem\I_Data.cs" />
@@ -771,7 +772,6 @@
     <Compile Include="Menu\Images\Icons.cs" />
     <Compile Include="Menu\Images\Icons.ID.cs" />
     <Compile Include="Menu\Images\Icons.InsertCustomEntries.cs" />
-    <Compile Include="Menu\IGMDataItem\IGMDataItem.cs" />
     <Compile Include="Menu\IGMDataItem\IGMDataItem_Empty.cs" />
     <Compile Include="Menu\IGMDataItem\IGMDataItem_Face.cs" />
     <Compile Include="Menu\IGMDataItem\IGMDataItem_Icon.cs" />
