--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Menu\IGMDataItem\I_Data.cs" />
     <Compile Include="Menu\IGMDataItem\I_FontColor.cs" />
     <Compile Include="Menu\IGMDataItem\I_Palette.cs" />
+    <Compile Include="Menu\IGMDataItem\Text.cs" />
     <Compile Include="Menu\IGMData\IGMData_BlueMagic_Pool.cs" />
     <Compile Include="Menu\Images\HSL.cs" />
     <Compile Include="Menu\IGMData\IGMData_Draw_Pool.cs" />
@@ -776,7 +777,6 @@
     <Compile Include="Menu\Images\Icons.cs" />
     <Compile Include="Menu\Images\Icons.ID.cs" />
     <Compile Include="Menu\Images\Icons.InsertCustomEntries.cs" />
-    <Compile Include="Menu\IGMDataItem\IGMDataItem_String.cs" />
     <Compile Include="Menu\IGMDataItem\IGMDataItem_Texture.cs" />
     <Compile Include="Menu\IGMData\IGMData.cs" />
     <Compile Include="Menu\IGMData\IGMData_ConfirmDialog.cs" />
