Went ahead and broke gradients into their own namespace.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -142,8 +142,8 @@
     <Compile Include="Battle\init_debugger_battle.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
-    <Compile Include="Battle\Menu\IGMDataItem\ATB_Gradient.cs" />
-    <Compile Include="Battle\Menu\IGMDataItem\Renzokeken_Gradient.cs" />
+    <Compile Include="Battle\Menu\IGMDataItem\Gradient\ATB.cs" />
+    <Compile Include="Battle\Menu\IGMDataItem\Gradient\Renzokeken.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_HP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXP.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PartyItems.cs" />
