--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -189,7 +189,7 @@
     <Compile Include="Menu\IGMDataItem\Texture.cs" />
     <Compile Include="Menu\IGMDataItem\Texture_Handler.cs" />
     <Compile Include="Menu\IGMData\Base.cs" />
-    <Compile Include="Menu\IGMData\IGMData_BlueMagic_Pool.cs" />
+    <Compile Include="Menu\IGMData\Pool\BlueMagic.cs" />
     <Compile Include="Menu\Images\HSL.cs" />
     <Compile Include="Menu\IGMData\IGMData_Draw_Pool.cs" />
     <Compile Include="Menu\IGMData\IGMData_SmallMsgBox.cs" />
